openshift/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vault-demo-web
  labels:
    app: vault-demo-web
spec:
  selector:
    app: vault-demo-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
